# CryptoChallenges

./: .gitattributes  CMakeLists.txt  README.md
Set1/: CMakeLists.txt  README.md
Set1/Challenge1/: CMakeLists.txt
Set1/Challenge1/src/: main.c
Set1/Challenge2/: CMakeLists.txt
Set1/Challenge2/src/: main.c
Set1/Challenge3/: CMakeLists.txt
Set1/Challenge3/src/: main.c
Set1/Challenge4/: CMakeLists.txt
Set1/Challenge4/src/: main.c
Set1/Challenge5/: CMakeLists.txt  exercise5.html  wikiplain.txt
Set1/Challenge5/src/: main.c
Set1/Challenge6/: CMakeLists.txt
Set1/Challenge6/src/: main.c
Set1/Challenge7/: CMakeLists.txt
Set1/Challenge7/src/: main.c
Set1/Challenge8/: CMakeLists.txt
Set1/Challenge8/src/: main.c
Set1/common/: crypto.h
Set1_Basics/1.Hex2base64/: CMakeCache.txt  cmake_install.cmake  run
Set1_Basics/2.Fixed_XOR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/3.Single-byte_XOR_cipher/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/4.Detect_single-character_XOR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/5.Repeating-key_XOR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/6.Breaking_repeating-key_XOR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/7.AES_in_ECB_mode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set1_Basics/Hex2base64/: CMakeLists.txt  Makefile  main.cpp
Set2/: CMakeLists.txt
Set2/Challenge10/: CMakeLists.txt
Set2/Challenge10/src/: main.c
Set2/Challenge11/: CMakeLists.txt
Set2/Challenge11/src/: main.c
Set2/Challenge12/: CMakeLists.txt
Set2/Challenge12/src/: main.c
Set2/Challenge13/: CMakeLists.txt
Set2/Challenge13/src/: BasicUserProfile.c  BasicUserProfile.h  main.c
Set2/Challenge14/: CMakeLists.txt
Set2/Challenge14/src/: main.c
Set2/Challenge15/: CMakeLists.txt
Set2/Challenge15/src/: main.c
Set2/Challenge16/: CMakeLists.txt
Set2/Challenge16/src/: BitflippingOracleCBC.c  BitflippingOracleCBC.h  main.c
Set2/Challenge9/: CMakeLists.txt
Set2/Challenge9/src/: main.c
Set2_BlockCrypto/10.Implement_CBC_mode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decrypted_ecb.txt  main.cpp  run  tries.txt
Set2_BlockCrypto/9.PKCS7_Padding/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set3/: CMakeLists.txt
Set3/Challenge17/: CMakeLists.txt
Set3/Challenge17/src/: main.c
Set3/Challenge18/: CMakeLists.txt
Set3/Challenge18/src/: main.c
Set3/Challenge19_20/: CMakeLists.txt
Set3/Challenge19_20/src/: main.c
Set3/Challenge21/: CMakeLists.txt
Set3/Challenge21/src/: main.c
Set3/Challenge22/: CMakeLists.txt
Set3/Challenge22/src/: main.c
Set3/Challenge23/: CMakeLists.txt
Set3/Challenge23/src/: main.c
Set3/Challenge24/: CMakeLists.txt
Set3/Challenge24/src/: main.c
Set3_Block&StreamCrypto/18.Implement_CTR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run  tries.txt
Set3_Block&StreamCrypto/19.BreakFixed-nonce_CTR_substitutions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set3_Block&StreamCrypto/21.Implement_MT19937/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
Set3_Block&StreamCrypto/22.CrackMT19937seed/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  run
common/: CMakeLists.txt  OArray.c  OArray.h  OMT19937.c  OMT19937.h  crypto.c  crypto.h  encodings.c  encodings.h  misc.c  misc.h
tests/: CMakeLists.txt
tests/src/: golden.h  tests.cpp
